# EKA2L1-MiyooFlip

./: .gitignore  CMakeLists.txt  README.MD  keymap.cfg
src/emu/: CMakeLists.txt
src/emu/common/: CMakeLists.txt
src/emu/common/include/common/: applauncher.h
src/emu/common/include/common/android/: jniutils.h
src/emu/common/src/: applauncher.cpp  sync.cpp
src/emu/common/src/android/: jniutils.cpp
src/emu/config/: CMakeLists.txt
src/emu/config/include/config/: config.h  options.inl
src/emu/cpu/: CMakeLists.txt
src/emu/disasm/: CMakeLists.txt
src/emu/dispatch/: CMakeLists.txt
src/emu/dispatch/src/: screen.cpp
src/emu/drivers/: CMakeLists.txt
src/emu/drivers/include/drivers/graphics/: emu_window.h
src/emu/drivers/include/drivers/graphics/backend/ogl/: buffer_ogl.h  common_ogl.h  graphics_ogl.h
src/emu/drivers/include/drivers/hwrm/backend/: vibration_sdl2.h
src/emu/drivers/include/drivers/input/backend/: emu_controller_sdl2.h
src/emu/drivers/src/: sdl2_scoping.cpp
src/emu/drivers/src/audio/backend/cubeb/: stream_cubeb.cpp
src/emu/drivers/src/graphics/: context.cpp  graphics.cpp
src/emu/drivers/src/graphics/backend/: context_egl.cpp  context_egl.h  context_egl_android.cpp  context_egl_trimuiBrick.cpp  context_egl_ubuntu.cpp  graphics_driver_shared.cpp
src/emu/drivers/src/graphics/backend/ogl/: fb_ogl.cpp  graphics_ogl.cpp  input_desc_ogl.cpp  shader_ogl.cpp  texture_ogl.cpp
src/emu/drivers/src/hwrm/backend/: vibration_sdl2.cpp
src/emu/drivers/src/input/backend/: emu_controller_sdl2.cpp
src/emu/gdbstub/: CMakeLists.txt
src/emu/j2me/: CMakeLists.txt
src/emu/kernel/: CMakeLists.txt
src/emu/ldd/: CMakeLists.txt
src/emu/loader/: CMakeLists.txt
src/emu/mem/: CMakeLists.txt
src/emu/package/: CMakeLists.txt
src/emu/scripting/: CMakeLists.txt
src/emu/sdl2emu/: CMakeLists.txt
src/emu/sdl2emu/include/: emu_window_sdl2.h  input_dialog.h  launcher.h  state.h  thread.h
src/emu/sdl2emu/src/: emu_window_sdl2.cpp  input_dialog.cpp  launcher.cpp  main_mflip.cpp  main_trimuiBrick.cpp  main_ubuntu.cpp  menu_mflip.cpp  menu_trimuiBrick.cpp  menu_ubuntu.cpp  native-lib.cpp  state.cpp  thread.cpp
src/emu/services/: CMakeLists.txt
src/emu/services/include/services/hwrm/light/: light.h
src/emu/services/include/services/msv/operations/: create.h
src/emu/services/include/services/window/: util.h
src/emu/services/src/window/: screen.cpp
src/emu/system/: CMakeLists.txt
src/emu/system/src/: epoc.cpp
src/emu/system/src/installation/: rpkg.cpp
src/emu/utils/: CMakeLists.txt
src/emu/vfs/: CMakeLists.txt
